fixed alignment social icons header

--- a/wp-content/themes/constructo/custom.css
+++ b/wp-content/themes/constructo/custom.css
@@ -2921,15 +2921,15 @@ section.statement{
         margin-left: 20px;
     }
     .twitter-icon{
-        margin-left: 25%;
+        margin-left: 20%;
         margin-top: 32px;
     }
     .pinterest-icon{
-        margin-left: 55%;
+        margin-left: 42%;
         margin-top: 32px;
     }
     .googlep-icon{
-        margin-left: 84%;
+        margin-left: 67%;
         margin-top: 32px;
     }
 }
@@ -3027,15 +3027,15 @@ section.statement{
         margin-left: 20px;
     }
     .twitter-icon{
-        margin-left: 25%;
+        margin-left: 20%;
         margin-top: 32px;
     }
     .pinterest-icon{
-        margin-left: 55%;
+        margin-left: 42%;
         margin-top: 32px;
     }
     .googlep-icon{
-        margin-left: 84%;
+        margin-left: 67%;
         margin-top: 32px;
     }
 }
@@ -3133,15 +3133,15 @@ section.statement{
         margin-left: 20px;
     }
     .twitter-icon{
-        margin-left: 25%;
+        margin-left: 20%;
         margin-top: 32px;
     }
     .pinterest-icon{
-        margin-left: 55%;
+        margin-left: 42%;
         margin-top: 32px;
     }
     .googlep-icon{
-        margin-left: 84%;
+        margin-left: 67%;
         margin-top: 32px;
     }
 }
@@ -3239,15 +3239,15 @@ section.statement{
         margin-left: 20px;
     }
     .twitter-icon{
-        margin-left: 25%;
+        margin-left: 18%;
         margin-top: 32px;
     }
     .pinterest-icon{
-        margin-left: 55%;
+        margin-left: 38%;
         margin-top: 32px;
     }
     .googlep-icon{
-        margin-left: 84%;
+        margin-left: 57%;
         margin-top: 32px;
     }
 }
@@ -3345,15 +3345,15 @@ section.statement{
         margin-left: 20px;
     }
     .twitter-icon{
-        margin-left: 25%;
+        margin-left: 18%;
         margin-top: 32px;
     }
     .pinterest-icon{
-        margin-left: 55%;
+        margin-left: 38%;
         margin-top: 32px;
     }
     .googlep-icon{
-        margin-left: 84%;
+        margin-left: 57%;
         margin-top: 32px;
     }
 }
@@ -3451,15 +3451,15 @@ section.statement{
         margin-left: 20px;
     }
     .twitter-icon{
-        margin-left: 25%;
+        margin-left: 15%;
         margin-top: 32px;
     }
     .pinterest-icon{
-        margin-left: 55%;
+        margin-left: 30%;
         margin-top: 32px;
     }
     .googlep-icon{
-        margin-left: 84%;
+        margin-left: 47%;
         margin-top: 32px;
     }
 }
@@ -3557,15 +3557,15 @@ section.statement{
         margin-left: 20px;
     }
     .twitter-icon{
-        margin-left: 25%;
+        margin-left: 15%;
         margin-top: 32px;
     }
     .pinterest-icon{
-        margin-left: 55%;
+        margin-left: 30%;
         margin-top: 32px;
     }
     .googlep-icon{
-        margin-left: 84%;
+        margin-left: 47%;
         margin-top: 32px;
     }
 }
@@ -3663,15 +3663,15 @@ section.statement{
         margin-left: 20px;
     }
     .twitter-icon{
-        margin-left: 25%;
+        margin-left: 12%;
         margin-top: 32px;
     }
     .pinterest-icon{
-        margin-left: 55%;
+        margin-left: 25%;
         margin-top: 32px;
     }
     .googlep-icon{
-        margin-left: 84%;
+        margin-left: 37%;
         margin-top: 32px;
     }
 }
